# guidedLP

./: INSTALLATION.md  README.md  debug_installation.py  debug_temporal.py  fix_installation.sh  guidedLP_simple.py  pyproject.toml  pyproject_broken.toml  setup.py  test_imports.py  test_noise_category.py  test_readme_examples.py  test_temporal_bipartite.py
docs/api/: network.md
examples/data/: community_seeds.csv  social_network.csv  temporal_communications.csv  user_metadata.csv
guidedLP/: pyproject.toml
guidedLP/network/: net_utils.py
guidedLabelPropagation/: pyproject.toml
guidedLabelPropagation/guidedLP/tests/network/: test_backboning.py
src/: __init__.py
src/glp/: __init__.py  evaluation.py  propagation.py  utils.py  validation.py
src/network/: __init__.py  analysis.py  backboning.py  communities.py  construction.py  export.py  filtering.py
src/timeseries/: __init__.py  category_analysis.py  slicing.py  temporal_metrics.py
tests/common/: test_validators.py
