[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guidedLP"
version = "0.1.0"
description = "Large-scale network analysis with Guided Label Propagation for computational social science"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["network-analysis", "community-detection", "social-science", "label-propagation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Sociology",
]

dependencies = [
    "networkit>=11.0",
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]
viz = [
    "matplotlib>=3.6",
    "plotly>=5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/guided-label-propagation"
Documentation = "https://guided-label-propagation.readthedocs.io"
Repository = "https://github.com/yourusername/guided-label-propagation.git"
Issues = "https://github.com/yourusername/guided-label-propagation/issues"

[tool.setuptools.packages.find]
where = ["guidedLP/src"]